// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoreBanner should render when isContentLeftMobile is true 1`] = `
<div
  className="mfui-store-banner mfui-store-banner_theme_default mfui-store-banner_mask_android mfui-store-banner_content-left-mobile"
  data-test-id="root-test"
>
  <div
    className="mfui-store-banner__container"
  >
    <div
      className="mfui-store-banner__grid"
    >
      <Grid>
        <GridColumn
          all="6"
          mobile="12"
          rightOffsetWide="1"
        >
          <div
            className="mfui-store-banner__content"
          >
            <Header
              as="h2"
              className="mfui-store-banner__title"
              color="inherit"
            >
              Title
            </Header>
            <Paragraph
              className="mfui-store-banner__text"
              color="inherit"
              hasMargin={false}
            >
              Text
            </Paragraph>
            <div
              className="mfui-store-banner__links"
            >
              <div
                className="mfui-store-banner__stores"
              >
                <StoreButton
                  className="mfui-store-banner__store-link mfui-store-banner__store-link_app-store"
                  dataAttrs={
                    Object {
                      "root": Object {
                        "data-test-id": "linkApple-test",
                      },
                    }
                  }
                  href="App Store link"
                  rel="nofollow"
                  theme="app-store"
                />
                <StoreButton
                  className="mfui-store-banner__store-link mfui-store-banner__store-link_google-play"
                  dataAttrs={
                    Object {
                      "root": Object {
                        "data-test-id": "linkGoogle-test",
                      },
                    }
                  }
                  href="Google Play link"
                  rel="nofollow"
                  theme="google-play"
                />
              </div>
            </div>
          </div>
        </GridColumn>
        <GridColumn
          all="4"
          desktop="6"
          mobile="12"
          tablet="6"
        >
          <div
            className="mfui-store-banner__device-wrapper"
          >
            <div
              className="mfui-store-banner__device-mask"
            />
            <img
              alt="Изображение приложения на экране телефона"
              className="mfui-store-banner__screen"
              src="image.png"
            />
          </div>
        </GridColumn>
      </Grid>
    </div>
  </div>
</div>
`;

exports[`StoreBanner should render with Huawei Store 1`] = `
<div
  className="mfui-store-banner mfui-store-banner_theme_default mfui-store-banner_mask_android custom-class-name"
  data-test-id="root-test"
>
  <div
    className="mfui-store-banner__container"
  >
    <div
      className="mfui-store-banner__grid"
    >
      <Grid>
        <GridColumn
          all="6"
          mobile="12"
          rightOffsetWide="1"
        >
          <div
            className="mfui-store-banner__content"
          >
            <Header
              as="h2"
              className="mfui-store-banner__title"
              color="inherit"
            >
              Title
            </Header>
            <Paragraph
              className="mfui-store-banner__text"
              color="inherit"
              hasMargin={false}
            >
              Text
            </Paragraph>
            <div
              className="mfui-store-banner__links mfui-store-banner__links_three"
            >
              <div
                className="mfui-store-banner__stores"
              >
                <StoreButton
                  className="mfui-store-banner__store-link mfui-store-banner__store-link_app-store"
                  dataAttrs={
                    Object {
                      "root": Object {
                        "data-test-id": "linkApple-test",
                      },
                    }
                  }
                  href="App Store link"
                  rel="nofollow"
                  theme="app-store"
                />
                <StoreButton
                  className="mfui-store-banner__store-link mfui-store-banner__store-link_google-play"
                  dataAttrs={
                    Object {
                      "root": Object {
                        "data-test-id": "linkGoogle-test",
                      },
                    }
                  }
                  href="Google Play link"
                  rel="nofollow"
                  theme="google-play"
                />
                <StoreButton
                  className="mfui-store-banner__store-link mfui-store-banner__store-link_huawei-store"
                  dataAttrs={
                    Object {
                      "root": Object {
                        "data-test-id": "linkHuawei-test",
                      },
                    }
                  }
                  href="#huawei"
                  rel="nofollow"
                  theme="huawei-store"
                />
              </div>
            </div>
          </div>
        </GridColumn>
        <GridColumn
          all="4"
          desktop="6"
          mobile="12"
          tablet="6"
        >
          <div
            className="mfui-store-banner__device-wrapper"
          >
            <div
              className="mfui-store-banner__device-mask"
            />
            <img
              alt="Изображение приложения на экране телефона"
              className="mfui-store-banner__screen"
              src="image.png"
            />
          </div>
        </GridColumn>
      </Grid>
    </div>
  </div>
</div>
`;

exports[`StoreBanner should render with QR-code 1`] = `
<div
  className="mfui-store-banner mfui-store-banner_theme_default mfui-store-banner_mask_android"
  data-test-id="root-test"
>
  <div
    className="mfui-store-banner__container"
  >
    <div
      className="mfui-store-banner__grid"
    >
      <Grid>
        <GridColumn
          all="6"
          mobile="12"
          rightOffsetWide="1"
        >
          <div
            className="mfui-store-banner__content"
          >
            <Header
              as="h2"
              className="mfui-store-banner__title"
              color="inherit"
            >
              Title
            </Header>
            <Paragraph
              className="mfui-store-banner__text"
              color="inherit"
              hasMargin={false}
            >
              Text
            </Paragraph>
            <div
              className="mfui-store-banner__links"
            >
              <img
                alt="QR-код"
                className="mfui-store-banner__qr-code"
                src="qr-code.png"
              />
              <div
                className="mfui-store-banner__stores"
              >
                <StoreButton
                  className="mfui-store-banner__store-link mfui-store-banner__store-link_app-store"
                  dataAttrs={
                    Object {
                      "root": Object {
                        "data-test-id": "linkApple-test",
                      },
                    }
                  }
                  href="App Store link"
                  rel="nofollow"
                  theme="app-store"
                />
                <StoreButton
                  className="mfui-store-banner__store-link mfui-store-banner__store-link_google-play"
                  dataAttrs={
                    Object {
                      "root": Object {
                        "data-test-id": "linkGoogle-test",
                      },
                    }
                  }
                  href="Google Play link"
                  rel="nofollow"
                  theme="google-play"
                />
              </div>
            </div>
          </div>
        </GridColumn>
        <GridColumn
          all="4"
          desktop="6"
          mobile="12"
          tablet="6"
        >
          <div
            className="mfui-store-banner__device-wrapper"
          >
            <div
              className="mfui-store-banner__device-mask"
            />
            <img
              alt="Изображение приложения на экране телефона"
              className="mfui-store-banner__screen"
              src="image.png"
            />
          </div>
        </GridColumn>
      </Grid>
    </div>
  </div>
</div>
`;

exports[`StoreBanner should render with custom class names 1`] = `
<div
  className="mfui-store-banner mfui-store-banner_theme_default mfui-store-banner_mask_android custom-class-name root-custom-class-name"
  data-test-id="root-test"
>
  <div
    className="mfui-store-banner__container"
  >
    <div
      className="mfui-store-banner__grid"
    >
      <Grid>
        <GridColumn
          all="6"
          mobile="12"
          rightOffsetWide="1"
        >
          <div
            className="mfui-store-banner__content"
          >
            <Header
              as="h2"
              className="mfui-store-banner__title"
              color="inherit"
            >
              Title
            </Header>
            <Paragraph
              className="mfui-store-banner__text"
              color="inherit"
              hasMargin={false}
            >
              Text
            </Paragraph>
            <div
              className="mfui-store-banner__links"
            >
              <div
                className="mfui-store-banner__stores"
              >
                <StoreButton
                  className="mfui-store-banner__store-link mfui-store-banner__store-link_app-store app-store-custom-class-name"
                  dataAttrs={
                    Object {
                      "root": Object {
                        "data-test-id": "linkApple-test",
                      },
                    }
                  }
                  href="App Store link"
                  rel="nofollow"
                  theme="app-store"
                />
                <StoreButton
                  className="mfui-store-banner__store-link mfui-store-banner__store-link_google-play google-store-custom-class-name"
                  dataAttrs={
                    Object {
                      "root": Object {
                        "data-test-id": "linkGoogle-test",
                      },
                    }
                  }
                  href="Google Play link"
                  rel="nofollow"
                  theme="google-play"
                />
              </div>
            </div>
          </div>
        </GridColumn>
        <GridColumn
          all="4"
          desktop="6"
          mobile="12"
          tablet="6"
        >
          <div
            className="mfui-store-banner__device-wrapper"
          >
            <div
              className="mfui-store-banner__device-mask"
            />
            <img
              alt="Изображение приложения на экране телефона"
              className="mfui-store-banner__screen"
              src="image.png"
            />
          </div>
        </GridColumn>
      </Grid>
    </div>
  </div>
</div>
`;

exports[`StoreBanner should render with green button 1`] = `
<div
  className="mfui-store-banner mfui-store-banner_theme_default mfui-store-banner_mask_android custom-class-name"
  data-test-id="root-test"
>
  <div
    className="mfui-store-banner__container"
  >
    <div
      className="mfui-store-banner__grid"
    >
      <Grid>
        <GridColumn
          all="6"
          mobile="12"
          rightOffsetWide="1"
        >
          <div
            className="mfui-store-banner__content"
          >
            <Header
              as="h2"
              className="mfui-store-banner__title"
              color="inherit"
            >
              Title
            </Header>
            <Paragraph
              className="mfui-store-banner__text"
              color="inherit"
              hasMargin={false}
            >
              Text
            </Paragraph>
            <div
              className="mfui-store-banner__links"
            >
              <Button
                className="mfui-store-banner__button"
                dataAttrs={
                  Object {
                    "root": Object {
                      "data-test-id": "button-test",
                    },
                  }
                }
                href="#button"
                rel="nofollow"
                theme="green"
              >
                Установите приложение
              </Button>
            </div>
          </div>
        </GridColumn>
        <GridColumn
          all="4"
          desktop="6"
          mobile="12"
          tablet="6"
        >
          <div
            className="mfui-store-banner__device-wrapper"
          >
            <div
              className="mfui-store-banner__device-mask"
            />
            <img
              alt="Изображение приложения на экране телефона"
              className="mfui-store-banner__screen"
              src="image.png"
            />
          </div>
        </GridColumn>
      </Grid>
    </div>
  </div>
</div>
`;

exports[`StoreBanner should render with green theme 1`] = `
<div
  className="mfui-store-banner mfui-store-banner_theme_green mfui-store-banner_mask_android"
  data-test-id="root-test"
>
  <div
    className="mfui-store-banner__container"
  >
    <div
      className="mfui-store-banner__grid"
    >
      <Grid>
        <GridColumn
          all="6"
          mobile="12"
          rightOffsetWide="1"
        >
          <div
            className="mfui-store-banner__content"
          >
            <Header
              as="h2"
              className="mfui-store-banner__title"
              color="inherit"
            >
              Title
            </Header>
            <Paragraph
              className="mfui-store-banner__text"
              color="inherit"
              hasMargin={false}
            >
              Text
            </Paragraph>
            <div
              className="mfui-store-banner__links"
            >
              <div
                className="mfui-store-banner__stores"
              >
                <StoreButton
                  className="mfui-store-banner__store-link mfui-store-banner__store-link_app-store"
                  dataAttrs={
                    Object {
                      "root": Object {
                        "data-test-id": "linkApple-test",
                      },
                    }
                  }
                  href="App Store link"
                  rel="nofollow"
                  theme="app-store"
                />
                <StoreButton
                  className="mfui-store-banner__store-link mfui-store-banner__store-link_google-play"
                  dataAttrs={
                    Object {
                      "root": Object {
                        "data-test-id": "linkGoogle-test",
                      },
                    }
                  }
                  href="Google Play link"
                  rel="nofollow"
                  theme="google-play"
                />
              </div>
            </div>
          </div>
        </GridColumn>
        <GridColumn
          all="4"
          desktop="6"
          mobile="12"
          tablet="6"
        >
          <div
            className="mfui-store-banner__device-wrapper"
          >
            <div
              className="mfui-store-banner__device-mask"
            />
            <img
              alt="Изображение приложения на экране телефона"
              className="mfui-store-banner__screen"
              src="image.png"
            />
          </div>
        </GridColumn>
      </Grid>
    </div>
  </div>
</div>
`;

exports[`StoreBanner should render with iphone mask 1`] = `
<div
  className="mfui-store-banner mfui-store-banner_theme_default mfui-store-banner_mask_black-iphone"
  data-test-id="root-test"
>
  <div
    className="mfui-store-banner__container"
  >
    <div
      className="mfui-store-banner__grid"
    >
      <Grid>
        <GridColumn
          all="6"
          mobile="12"
          rightOffsetWide="1"
        >
          <div
            className="mfui-store-banner__content"
          >
            <Header
              as="h2"
              className="mfui-store-banner__title"
              color="inherit"
            >
              Title
            </Header>
            <Paragraph
              className="mfui-store-banner__text"
              color="inherit"
              hasMargin={false}
            >
              Text
            </Paragraph>
            <div
              className="mfui-store-banner__links"
            >
              <div
                className="mfui-store-banner__stores"
              >
                <StoreButton
                  className="mfui-store-banner__store-link mfui-store-banner__store-link_app-store"
                  dataAttrs={
                    Object {
                      "root": Object {
                        "data-test-id": "linkApple-test",
                      },
                    }
                  }
                  href="App Store link"
                  rel="nofollow"
                  theme="app-store"
                />
                <StoreButton
                  className="mfui-store-banner__store-link mfui-store-banner__store-link_google-play"
                  dataAttrs={
                    Object {
                      "root": Object {
                        "data-test-id": "linkGoogle-test",
                      },
                    }
                  }
                  href="Google Play link"
                  rel="nofollow"
                  theme="google-play"
                />
              </div>
            </div>
          </div>
        </GridColumn>
        <GridColumn
          all="4"
          desktop="6"
          mobile="12"
          tablet="6"
        >
          <div
            className="mfui-store-banner__device-wrapper"
          >
            <div
              className="mfui-store-banner__device-mask"
            />
            <img
              alt="Изображение приложения на экране телефона"
              className="mfui-store-banner__screen"
              src="image.png"
            />
          </div>
        </GridColumn>
      </Grid>
    </div>
  </div>
</div>
`;

exports[`StoreBanner should render with required props 1`] = `
<div
  className="mfui-store-banner mfui-store-banner_theme_default mfui-store-banner_mask_android"
  data-test-id="root-test"
>
  <div
    className="mfui-store-banner__container"
  >
    <div
      className="mfui-store-banner__grid"
    >
      <Grid>
        <GridColumn
          all="6"
          mobile="12"
          rightOffsetWide="1"
        >
          <div
            className="mfui-store-banner__content"
          >
            <Header
              as="h2"
              className="mfui-store-banner__title"
              color="inherit"
            >
              Title
            </Header>
            <Paragraph
              className="mfui-store-banner__text"
              color="inherit"
              hasMargin={false}
            >
              Text
            </Paragraph>
            <div
              className="mfui-store-banner__links"
            >
              <div
                className="mfui-store-banner__stores"
              >
                <StoreButton
                  className="mfui-store-banner__store-link mfui-store-banner__store-link_app-store"
                  dataAttrs={
                    Object {
                      "root": Object {
                        "data-test-id": "linkApple-test",
                      },
                    }
                  }
                  href="App Store link"
                  rel="nofollow"
                  theme="app-store"
                />
                <StoreButton
                  className="mfui-store-banner__store-link mfui-store-banner__store-link_google-play"
                  dataAttrs={
                    Object {
                      "root": Object {
                        "data-test-id": "linkGoogle-test",
                      },
                    }
                  }
                  href="Google Play link"
                  rel="nofollow"
                  theme="google-play"
                />
              </div>
            </div>
          </div>
        </GridColumn>
        <GridColumn
          all="4"
          desktop="6"
          mobile="12"
          tablet="6"
        >
          <div
            className="mfui-store-banner__device-wrapper"
          >
            <div
              className="mfui-store-banner__device-mask"
            />
            <img
              alt="Изображение приложения на экране телефона"
              className="mfui-store-banner__screen"
              src="image.png"
            />
          </div>
        </GridColumn>
      </Grid>
    </div>
  </div>
</div>
`;

exports[`StoreBanner should render with violet button 1`] = `
<div
  className="mfui-store-banner mfui-store-banner_theme_green mfui-store-banner_mask_android custom-class-name"
  data-test-id="root-test"
>
  <div
    className="mfui-store-banner__container"
  >
    <div
      className="mfui-store-banner__grid"
    >
      <Grid>
        <GridColumn
          all="6"
          mobile="12"
          rightOffsetWide="1"
        >
          <div
            className="mfui-store-banner__content"
          >
            <Header
              as="h2"
              className="mfui-store-banner__title"
              color="inherit"
            >
              Title
            </Header>
            <Paragraph
              className="mfui-store-banner__text"
              color="inherit"
              hasMargin={false}
            >
              Text
            </Paragraph>
            <div
              className="mfui-store-banner__links"
            >
              <Button
                className="mfui-store-banner__button"
                dataAttrs={
                  Object {
                    "root": Object {
                      "data-test-id": "button-test",
                    },
                  }
                }
                href="#button"
                rel="nofollow"
                theme="purple"
              >
                Установите приложение
              </Button>
            </div>
          </div>
        </GridColumn>
        <GridColumn
          all="4"
          desktop="6"
          mobile="12"
          tablet="6"
        >
          <div
            className="mfui-store-banner__device-wrapper"
          >
            <div
              className="mfui-store-banner__device-mask"
            />
            <img
              alt="Изображение приложения на экране телефона"
              className="mfui-store-banner__screen"
              src="image.png"
            />
          </div>
        </GridColumn>
      </Grid>
    </div>
  </div>
</div>
`;
